Arreglando gameState